Fixed the sub nav links alignment

--- a/css/layout.css
+++ b/css/layout.css
@@ -256,3 +256,8 @@ img.fb-link {
         padding: .5em;
     }
 }
+
+
+.r4c-sub-nav > li:first-child > a {
+    padding-left: 0; /* for the dynamic sub nav alignment */
+}
